Replaced URL by URI in order to accept 'dods://' protocol.